--- a/index.html
+++ b/index.html
@@ -21,14 +21,16 @@
 					<nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 						<a class="navbar-brand" href="#">Carousel</a>
 						<button
-							class="navbar-toggler d-lg-none"
+							class="navbar-toggler"
 							type="button"
 							data-bs-toggle="collapse"
 							data-bs-target="#collapsibleNavId"
 							aria-controls="collapsibleNavId"
 							aria-expanded="false"
 							aria-label="Toggle navigation"
-						></button>
+						>
+							<span class="navbar-toggler-icon"></span>
+						</button>
 						<div class="collapse navbar-collapse" id="collapsibleNavId">
 							<ul class="navbar-nav me-auto mt-2 mt-lg-0">
 								<li class="nav-item">
@@ -283,11 +285,6 @@
 			</footer>
 		</div>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-			crossorigin="anonymous"
-		></script>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
 			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
